toggle day/night mode

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -24,7 +24,7 @@
   right: 0;
   background-color: #222;
   overflow: scroll;
-  margin-top: 50px;
+  margin-top: 25px;
 }
 
 #item{
@@ -58,9 +58,15 @@
 }
 
 #timemode{
-  height: 50px;
-  background-color: #222;
+  height: 25px;
+  background-color: #777;
   width: 356px;
   position: fixed;
   right: 0;
+  color: white;
+  font-family: 'Sonsie One', cursive;
+}
+
+#timemode button{
+  float: right;
 }
