--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,5 @@
 
 
 <div id="map-canvas"></div>
-<div id="timemode"><button class="timemode">Time</button></div>
+<div id="timemode"> Pulse<button class="timemode">Toggle Day/Night</button></div>
 <div id="feed"></div>
