updated train icon sizes and colors

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -17,7 +17,7 @@
   </div>
   
   <div class="cta-logo">
-    <a href="http://transitchicago.com"><img id="cta-logo" src="http://i.minus.com/iSCEesN78mwP3.png"></a>
+    <a href="http://transitchicago.com"><img id="cta-logo" src="http://i.minus.com/ifeN9qw2al90k.png"></a>
   </div>
 
   <div class="facebook-logo">
