footer moved to right side

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,7 @@
 
 
 <div id="map-canvas"></div>
-<div id="timemode"> Pulse<button class="timemode">Toggle Day/Night</button></div>
+<div id="timemode"><p>Pulse</p><button class="timemode">Toggle Day/Night</button></div>
 <div id="feed"></div>
 
 
@@ -25,8 +25,7 @@
   </div>
 
   <div class="eventful-badge eventful-small">
-    <img src="http://api.eventful.com/images/powered/eventful_58x20.gif" alt="Local Events, Concerts, Tickets">
-    <p><a id="eventful" href="http://eventful.com/">Events</a> by Eventful</p>
+    <a id="eventful" href="http://eventful.com/"><img src="http://api.eventful.com/images/powered/eventful_58x20.gif" alt="Local Events, Concerts, Tickets"></a>
   </div>
 
 </footer>
