--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -24,7 +24,7 @@
   right: 0;
   background-color: #222;
   overflow: scroll;
-  margin-top: 25px;
+  margin-top: 35px;
 }
 
 #item{
@@ -58,43 +58,57 @@
 }
 
 #timemode{
-  height: 25px;
+  height: 35px;
   background-color: #777;
-  width: 356px;
+  padding-left: 10px;
+  padding-top: 6px;
+  width: 346px;
   position: fixed;
   right: 0;
   color: white;
   font-family: 'Sonsie One', cursive;
+  font-size: 20px;
+}
+
+#timemode p {
+  float: left;
+  margin: 0;
+  margin-left: 5px;
+  width: 50px;
+  letter-spacing: 2px;
 }
 
 #timemode button{
   float: right;
+  margin-right: 15px;
 }
 
 footer {
   background-color: #777;
   display: inline-block;
-  height: 60px;
-  width: 100%;
+  height: 50px;
+  width: 356px;
   position: fixed;
   bottom: 0;
-  left: 0;
+  right: 0;
 }
 
 footer div {
   display: inline-block;
   float: left;
-  height: 50px;
-  margin: 5px 15px 5px 15px;
+  height: 30px;
+  margin: 15px 10px 10px 0;
   text-align: center;
-  width: 60px;
+  width: 30px;
 }
 
 .power {
   color: white;
   font-family: 'Sonsie One', cursive;
   font-size: 12px;
-  line-height: 50px;
+  line-height: 20px;
+  margin-left: 10px;
+  margin-right: 5px;
   width: 107px;
 }
 
@@ -113,18 +127,16 @@ footer div a {
 footer div p {
   display: block;
   font-family: Arial;
-  line-height: 11px;
   font-size: 11px;
   margin: 0 auto;
 }
 
 footer div a img {
-  height: 50px;
-  line-height: 50px;
+  height: 20px;
+  line-height: 20px;
 }
 
-#facebook-logo {
-  height: 40px;
-  margin-top: 5px;
+.eventful-badge {
+  margin-top: 10px;
 }
 
