--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,7 +13,7 @@
  */
 
 #map-canvas{
-  width: 100%;
+  width: calc(100% - 356px);
   float: left;
 }
 
@@ -144,5 +144,13 @@ footer div a img {
 
 .eventful-badge {
   margin-top: 10px;
+}
+
+.lat {
+  display: none;
+}
+
+.lon {
+  display: none;
 }
 
