updated divvy logo on footer

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -20,8 +20,8 @@
     <a href="http://transitchicago.com"><img id="cta-logo" src="http://i.minus.com/ifeN9qw2al90k.png"></a>
   </div>
 
-  <div class="facebook-logo">
-    <a href="http://facebook.com"><img id="facebook-logo" src="http://i.picresize.com/images/2013/10/20/xz76S.png"></a>
+  <div class="divvy-logo">
+    <a href="http://divvy.com"><img id="divvy-logo" src="http://i.minus.com/ibzAkEShKINb4e.png"></a>
   </div>
 
   <div class="eventful-badge eventful-small">
