--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,6 +3,13 @@
 <div id="map-canvas"></div>
 <div id="timemode"><p>Pulse</p><button class="timemode">Toggle Day/Night</button></div>
 <div id="feed"></div>
+<div id="instafeed">
+ <div id="centerer"> 
+  <div id="column1"></div>
+  <div id="column2"></div>
+  <div id="column3"></div>
+ </div> 
+</div>
 
 
 <footer>
