--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -9,6 +9,7 @@
  * compiled file, but it's generally better to create a new file per style scope.
  *
  *= require_self
+ *= require font-awesome
  *= require_tree .
  */
 
@@ -29,9 +30,9 @@
   float: left;
   /*right: 0;*/
   background-color: #222;
-    overflow: scroll;
-    overflow: hidden;
-  /*  margin-top: 35px;*/
+  overflow: scroll;
+  overflow: hidden;
+  margin-top: 35px;
   margin: 0 0 0 0;
 
 }
@@ -50,8 +51,7 @@
 
 #item{
   width:356px;
-  height: 115px;
-  padding-top: 20px;
+  height: 90px;
   background-color: #222;
   color: white;
   border-bottom: 1px solid #bbb;
@@ -69,7 +69,7 @@
 }
 
 #tweet{
-  width: 280px;
+  width: 270px;
   display: inline-block;
   float: right;
   margin: 0 auto;
@@ -82,7 +82,7 @@
   display: inline-block;
 }
 
-#instagram{
+.instagram{
   height: 150px;
   margin: 0 auto;
   width: 100px;
@@ -94,20 +94,14 @@
   background-color: #777;
   padding-left: 10px;
   padding-top: 6px;
-  width: 346px;
   position: relative;
   float: left;
   right: 0;
   color: white;
   font-family: 'Sonsie One', cursive;
-  font-size: 20px;
-}
-
-#timemode p {
   float: left;
   margin: 0;
   margin-left: 5px;
-  width: 50px;
   letter-spacing: 2px;
 }
 
@@ -214,5 +208,9 @@ footer div a img {
   width: 350px;
   margin-left: 6%;
   height: 100%;
+}
+
+#screenname{
+  font-weight: bold;
 }
 
