changed view title to PULSE Chicago

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Chicageaux</title>
+  <title>PULSE Chicago</title>
   <%= csrf_meta_tags %>
    <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
     <style type="text/css">
