--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,29 +19,21 @@
   overflow: hidden;
  }
 
-/*::-webkit-scrollbar              { /* 1 */ }
-::-webkit-scrollbar-button       { /* 2 */ }
-::-webkit-scrollbar-track        { /* 3 */ }
-::-webkit-scrollbar-track-piece  { /* 4 */ }
-::-webkit-scrollbar-thumb        { /* 5 */ }
-::-webkit-scrollbar-corner       { /* 6 */ }
-::-webkit-resizer*/
-
 ::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
     -webkit-border-radius: 10px;
     border-radius: 10px;
 }
- 
+
 /* Handle */
 ::-webkit-scrollbar-thumb {
     -webkit-border-radius: 10px;
     border-radius: 10px;
-    background: rgba(255,0,0,0.8); 
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+    background: rgba(255,0,0,0.8);
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
 }
 ::-webkit-scrollbar-thumb:window-inactive {
-  background: rgba(255,0,0,0.4); 
+  background: rgba(255,0,0,0.4);
 }
 
  #chicago {
@@ -108,9 +100,9 @@
   /*float: top;*/
   right: 0;
   color: white;
-  font-family: 
-  /*float: left;*/
-  margin: 0;
+/*  font-family: what;
+  float: left;
+  margin: 0;*/
   /*margin-left: 5px;*/
   letter-spacing: 2px;
   background: none;
@@ -172,7 +164,7 @@
 #prof {
   width: 53px;
   float: left;
-  padding-left: 10px; 
+  padding-left: 10px;
   padding-top: 10px;
   display: inline-block;
 }
@@ -300,7 +292,6 @@ footer div a img {
   margin-right: 8%;
   /*height: 100%;*/
   background: rgba(59, 69, 87, 0.0);
-  height: ;
 }
 
 #screenname{
