--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,14 +19,6 @@
   overflow: hidden;
  }
 
-/*::-webkit-scrollbar              { /* 1 */ }
-::-webkit-scrollbar-button       { /* 2 */ }
-::-webkit-scrollbar-track        { /* 3 */ }
-::-webkit-scrollbar-track-piece  { /* 4 */ }
-::-webkit-scrollbar-thumb        { /* 5 */ }
-::-webkit-scrollbar-corner       { /* 6 */ }
-::-webkit-resizer*/
-
 ::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
     -webkit-border-radius: 10px;
@@ -48,14 +40,13 @@
   position: absolute;
   left: 2%;
   font-family: 'Coda Caption', sans-serif;
-  color: rgba(156, 33, 51, 0.7);
+  color: rgba(256, 33, 51, 0.7);
  }
 
  p {
   padding: 0;
   margin: 0;
   border: 0;
-
  }
 
 #map-canvas{
@@ -71,50 +62,41 @@
   border: 0;
   position: absolute;
   right: 2%;
-  /*background-color: black;*/
   height: 100%;
 
 }
 
 #feed{
   width: 356px;
-  height: calc(50% - 32.5px);
+  height: calc(50% - 32px);
   position: relative;
   top: 25px;
-  /*top: 35px;*/
   overflow-x: hidden;
   border-top-left-radius: 10px 10px;
   border-top-right-radius: 10px 10px;
-
-  /*right: 2%;*/
-
-  /*float: right;*/
-  /*right: 0;*/
-  /*background-color: #222;*/
   overflow-y: scroll;
-  /*overflow: hidden;*/
-  /*margin-top: 35px;*/
+  overflow-y: hidden;
   margin: 0 0 0 0;
   background: rgba(59, 69, 87, 0.6);
 }
 
 #timemode{
-  /*height: 2%;*/
   min-height: 25px;
-  /*background-color: #777;*/
-  /*padding-left: 10px;*/
-  /*padding-top: 6px;*/
   position: absolute;
-  /*float: top;*/
   right: 0;
   color: white;
-  font-family: 
-  /*float: left;*/
   margin: 0;
-  /*margin-left: 5px;*/
   letter-spacing: 2px;
   background: none;
+}
 
+#centerer{
+  width: 356px;
+  margin: 0 auto;
+  margin-left: 8%;
+  margin-right: 8%;
+  background: rgba(59, 69, 87, 0.0);
+  height: ;
 }
 
 #instafeed{
@@ -122,39 +104,47 @@
   height: calc(50% - 63px);
   position: fixed;
   bottom: 70px;
-  /*right: 2%;*/
-  /*bottom: 35px;*/
   margin: 0 0 0 0;
-  /*float: top;*/
   overflow: hidden;
-  /*float: right;*/
-  /*overflow: scroll;*/
-  /*overflow: hidden;*/
-  /*z-index: -1;*/
-  /*background: rgba(59, 69, 87, 0.6);*/
   background: rgba(59, 69, 87, 0.6);
+}
 
+#column1{
+  padding-top: 10px;
+  width: 100px;
+  float: left;
+  height: 100%;
+  overflow: hidden;
+}
+
+#column2{
+  padding-top: 10px;
+  width: 100px;
+  float: left;
+  height: 100%;
+  overflow: hidden;
+}
+
+#column3{
+  padding-top: 10px;
+  width: 100px;
+  float: left;
+  height: 100%;
+  overflow: hidden;
 }
 
 #item{
   width:356px;
-
-  /*background-color: #222;*/
+  height: 80px;
   color: white;
-  /*border-bottom: 1px solid #bbb;*/
-  margin-bottom: 50pxpx;
+  margin-bottom: 5px;
 }
 
 #instaitem{
   width: 100%;
   margin: 0 auto;
   height: 100px;
-  /*background-color: #222;*/
-  /*color: white;*/
   padding: 0px;
-  /*background: rgba(59, 69, 87, 0.6);*/
-
-  /*border-bottom: 1px solid #bbb;*/
 }
 
 #tweet{
@@ -166,7 +156,6 @@
   padding-top: 8px;
   font-family: "Verdana", Geneva, sans-serif;
   font-size: 12px;
-  /*background: rgba(59, 69, 87, 0.6);*/
 }
 
 #prof {
@@ -181,10 +170,7 @@
   height: 150px;
   margin: 0 auto;
   width: 100px;
- /* line-height: 150px;*/
 }
-
-
 
 #timemode button{
   float: right;
@@ -196,10 +182,7 @@ footer {
   bottom: 15px;
   min-height: 40px;
   background-color: black;
-  /*display: inline-block;*/
-  /*height: 4%;*/
   width: 356px;
-  /*float: top;*/
   background: rgba(59, 69, 87, 0.6);
   border-bottom-left-radius: 10px 10px;
   border-bottom-right-radius: 10px 10px;
@@ -215,15 +198,15 @@ footer div {
 }
 
 .power {
-  /*color: white;*/
   font-family: 'Coda Caption', sans-serif;
-  color: rgba(156, 33, 51, 0.7);
-  font-size: 15px;
+  color: rgba(256, 33, 51, 0.7);
+  font-size: 14px;
   line-height: 20px;
   margin-left: 10px;
   margin-right: 5px;
   width: 107px;
 }
+
 .twitter-logo a img {
   height: 30px;
   width: 30px;
@@ -265,42 +248,6 @@ footer div a img {
 
 .lon {
   display: none;
-}
-
-#column1{
-  padding-top: 10px;
-  width: 100px;
-  float: left;
-  height: 100%;
-  overflow: hidden;
-}
-
-#column2{
-  padding-top: 10px;
-  width: 100px;
-  float: left;
-  height: 100%;
-  overflow: hidden;
-}
-
-#column3{
-  padding-top: 10px;
-  width: 100px;
-  float: left;
-  height: 100%;
-  overflow: hidden;
-}
-
-#centerer{
-  width: 356px;
-  /*margin-left: 6%;
-  margin-right: 6%;*/
-  margin: 0 auto;
-  margin-left: 8%;
-  margin-right: 8%;
-  /*height: 100%;*/
-  background: rgba(59, 69, 87, 0.0);
-  height: ;
 }
 
 #screenname{
