--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -15,7 +15,7 @@
 
 
   <footer id ="bottom">
-    <div class="power">powered by:</div>
+    <!-- <div class="power">powered by:</div> -->
     
     <div class="twitter-logo">
       <a href="http://twitter.com/"><img src="https://abs.twimg.com/a/1382083649/images/resources/twitter-bird-light-bgs.png"></a>
