pulling new master

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -40,7 +40,14 @@
   position: absolute;
   left: 2%;
   font-family: 'Coda Caption', sans-serif;
-  color: rgba(256, 33, 51, 0.7);
+  color: rgb(256, 33, 51);
+  background-color: #CCC;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-bottom: 5px;
+  border: 2px solid #BBB;
+  border-radius: 10px;
+  opacity: 0.7;
  }
 
  p {
