--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -17,6 +17,10 @@
   <footer id ="bottom">
     <!-- <div class="power">powered by:</div> -->
     
+    <div class="google-logo">
+      <a href="http://maps.google.com/"><img src="http://www.blogonair.org/wp-content/uploads/2013/01/Google-Map-Logo.png"></a>
+    </div>
+
     <div class="twitter-logo">
       <a href="http://twitter.com/"><img src="https://abs.twimg.com/a/1382083649/images/resources/twitter-bird-light-bgs.png"></a>
     </div>
@@ -31,6 +35,10 @@
   
     <div class="divvy-logo">
       <a href="http://divvy.com"><img id="divvy-logo" src="http://i.minus.com/ibzAkEShKINb4e.png"></a>
+    </div>
+
+    <div class="flightstats-logo">
+      <a href="http://flightstats.com"><img id="flightstats-logo" src="http://ww1.prweb.com/prfiles/2011/08/29/8881660/gI_116195_FlightStats%20Traveler.png"></a>
     </div>
   
     <div class="eventful-badge eventful-small">
