--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,6 +15,15 @@
 
  @import url(http://fonts.googleapis.com/css?family=Coda+Caption:800|Baumans);
 
+ @media (max-width: 700px) {
+  #chicago{
+    display:none;
+  }
+  #column_stable{
+    display: none;
+  }
+}
+
  body {
   overflow: hidden;
  }
