--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,51 @@
 <div class="city" id="nyc" >nyc</div>
 <div class="city" id="chi" >chi</div>
 <div id="map-canvas"></div>
+<div id="map-canvas"></div>
+<h1 id="chicago">chicago pulse</h1>
+
+  <div id='column_stable'>
+    <div id="timemode"></div>
+     <div id="feed"></div>
+      <div id="instafeed">
+        <div id="centerer"> 
+          <div id="column1"></div>
+          <div id="column2"></div>
+          <div id="column3"></div>
+        </div> 
+      </div>     
+
+
+  <footer id ="bottom">
+    <!-- <div class="power">powered by:</div> -->
+    
+    <div class="google-logo">
+      <a href="http://maps.google.com/" target="_blank"><img src="http://www.blogonair.org/wp-content/uploads/2013/01/Google-Map-Logo.png"></a>
+    </div>
+
+    <div class="twitter-logo">
+      <a href="http://twitter.com/" target="_blank"><img src="https://abs.twimg.com/a/1382083649/images/resources/twitter-bird-light-bgs.png"></a>
+    </div>
+    
+    <div class="instagram-logo">
+      <a href="http://instagram.com/" target="_blank"><img src="http://i.minus.com/izuhh4tjxc6Ko.png"></a>
+    </div>
+    
+    <div class="cta-logo">
+      <a href="http://transitchicago.com" target="_blank"><img id="cta-logo" src="http://i.minus.com/ifeN9qw2al90k.png"></a>
+    </div>
+  
+    <div class="divvy-logo">
+      <a href="http://divvy.com" target="_blank"><img id="divvy-logo" src="http://i.minus.com/ibzAkEShKINb4e.png"></a>
+    </div>
+
+    <div class="flightstats-logo">
+      <a href="http://flightstats.com" target="_blank"><img id="flightstats-logo" src="http://ww1.prweb.com/prfiles/2011/08/29/8881660/gI_116195_FlightStats%20Traveler.png"></a>
+    </div>
+  
+    <div class="eventful-badge eventful-small">
+      <a id="eventful" href="http://eventful.com/" target="_blank"><img src="http://api.eventful.com/images/powered/eventful_58x20.gif" alt="Local Events,   Concerts, Tickets"></a>
+    </div>
+  </footer>
+</div>
+
